-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.0, 5.5.1
-
Embedded Linux, OS X, X11
-
3dbdc367ffa50b1482d037c956336c809e53a0e6 (qtbase/5.6, 5.11.2015, 5.6)
It is a bit rare situation and I have not seen such an usage before, but it seems to be a bug. However, it also can be a misusing case.
So, the problem is:
The user have a QGraphicsView with a scene and proxy widget in it. in proxy widget is a widget that inherits from the QDialog. When the mouse button clicked in the top left corner (small corner 100x100 pxs), the dialog appears in the QGraphicsView. The very first time the dialog can be closed without any problems, but the next time, the dialog will block the GUI. I have tried a lot of different options, like emitting signals on mousePress event and so on, but nothing works if the dialog is opened with the exec() -method.
However, if the dialog is opened with open() method (well, it will not block the GUI and returns immediately) the dialog will not block GUI on the second run. It actually begins to work.
The small project is attached. And the problem can be reproduced easily, just click in the top left corner of the view and try to close the dialog two or more times.